Fixing icon alignment

--- a/styles/_icontext.scss
+++ b/styles/_icontext.scss
@@ -6,7 +6,6 @@
   &__square .sim-icon {
     width: 1.5em;
     height: 1.5em;
-    margin: -0.75em 0;
     display: inline-flex;
     align-items: center;
     justify-content: center;
